Code cleanup: fix deprecated APIs and comment unused imports
- Comment out unused imports with REVIEWED-UNUSED tag
- Update deprecated new URL(x) to URI.create(x).toURL()
- Update deprecated Runtime.exec() to ProcessBuilder
- Comment out unused fields and TODO comments